Changed how HTTP proxy accesses CoAP2CoAP proxy